[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "domainiq-cli"
version = "2.0.0"
description = "A modern Python client for the DomainIQ API - Domain Intelligence and Security Research"
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [
    {name = "Marc Rivero | @seifreed", email = "mriverolopez@gmail.com"}
]
maintainers = [
    {name = "Marc Rivero | @seifreed", email = "mriverolopez@gmail.com"}
]
keywords = [
    "domain",
    "security", 
    "intelligence",
    "whois",
    "dns",
    "cybersecurity",
    "api-client",
    "threat-intelligence"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.33.0",
    "urllib3>=2.6.0",
]

[project.optional-dependencies]
async = [
    "aiohttp>=3.13.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.7.0",
    "ruff>=0.15.0",
    "mypy>=1.20.0",
    "bandit[toml]>=1.9.0",
    "types-requests>=2.33.0",
]
quality = [
    "ruff>=0.15.0",
    "mypy>=1.20.0",
    "bandit[toml]>=1.9.0",
    "types-requests>=2.33.0",
]
docs = [
    "sphinx>=9.0.0",
    "sphinx-rtd-theme>=3.0.0",
    "myst-parser>=5.0.0",
]
all = [
    "domainiq[async,dev,docs]"
]

[project.urls]
Homepage = "https://github.com/seifreed/DomainIQ"
Repository = "https://github.com/seifreed/DomainIQ"
Documentation = "https://github.com/seifreed/DomainIQ#readme"
Issues = "https://github.com/seifreed/DomainIQ/issues"
Changelog = "https://github.com/seifreed/DomainIQ/blob/main/CHANGELOG.md"

[project.scripts]
domainiq = "domainiq.cli:main"

[tool.hatch.version]
path = "domainiq/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/domainiq",
    "/tests",
    "/docs",
    "README.md",
    "LICENSE.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["domainiq"]

[tool.coverage.run]
source = ["domainiq"]
branch = true
omit = [
    "tests/*",
    "domainiq/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Ruff configuration - replaces Black, isort, flake8, and more
[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "DJ",     # flake8-django
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "INT",    # flake8-gettext
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "TD",     # flake8-todos
    "FIX",    # flake8-fixme
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "NPY",    # numpy
    "PERF",   # perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "RUF",    # ruff-specific
]
ignore = [
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "S101",   # Use of assert (acceptable in tests)
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link on line following TODO
    "FIX002", # Line contains TODO
    "COM812", # Trailing comma missing (handled by formatter)
    "ISC001", # Implicitly concatenated string literals (handled by formatter)
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["domainiq"]
known-third-party = ["requests", "aiohttp", "pytest"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Use of assert
    "D",      # Missing docstrings in tests
    "ANN",    # Missing annotations in tests
    "PLR2004", # Magic value used in comparison
    "S311",   # Standard pseudo-random generators
    "SLF001", # Private member access (acceptable in tests)
]
"examples/**/*.py" = [
    "T201",   # Print found (acceptable in examples)
    "D",      # Missing docstrings in examples
]
"domainiq/cli.py" = [
    "T201",   # print() found (intentional for CLI tool)
]

# MyPy configuration with strict settings
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true
error_summary = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "examples.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Bandit security linting
[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = [
    "B101",  # assert_used (acceptable in tests)
    "B601",  # paramiko_calls (not using paramiko)
]

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/tests.py"]
